# fastapi-economic-bot-showcase

./: README.md  docker-compose.yml  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2ccaab809672_add_default_value_to_user_balance_in_.py  5bef7eeb1d62_add_column_vk_id_to_user_table.py  bacfcc16b24f_create_user_table.py
src/core_bot_api/: database.py  main.py  sqlalchemy_models.py  validation_models.py  view_auth.py  view_economy.py
src/core_bot_api/tests/: conftest.py  test_database.py  test_economy_api.py  test_main_api.py
